--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-SC2PATH="/Applications/StarCraft II"
+SC2PATH_MAC="/Applications/StarCraft II"
+SC2PATH_LINUX="/home/clay/StarCraftII"
+
+SC2PATH="/home/clay/StarCraftII"
